--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>zhenya</title>
+  <title>index — zhenya</title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <header>
     <nav>
+      <a href="index.html">home</a>
       <a href="about.html">about</a>
       <a href="archive.html">archive</a>
       <a href="objects.html">objects</a>
@@ -17,12 +17,12 @@
   </header>
 
   <main>
-    <h1>i draw memory</h1>
-    <p>sometimes it helps to not forget</p>
+    <h1>index</h1>
+    <p>i draw memory<br><small>sometimes it helps to not forget</small></p>
   </main>
 
   <footer>
-    <img src="assets/monkey.svg" alt="monkey" class="monkey" />
+    <img src="assets/monkey.png" alt="monkey" class="monkey" />
   </footer>
 </body>
 </html>
