--- a/about.html
+++ b/about.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,6 +10,7 @@
   <header>
     <nav>
       <a href="index.html">home</a>
+      <a href="about.html">about</a>
       <a href="archive.html">archive</a>
       <a href="objects.html">objects</a>
     </nav>
@@ -18,12 +18,11 @@
 
   <main>
     <h1>about</h1>
-    <p>i try to draw how it felt, not how it looked.  
-       i make toys, because the memory is soft.</p>
+    <p>i try to draw how it felt, not how it looked.<br>i make toys, because the memory is soft.</p>
   </main>
 
   <footer>
-    <img src="assets/monkey.svg" alt="monkey" class="monkey" />
+    <img src="assets/monkey.png" alt="monkey" class="monkey" />
   </footer>
 </body>
 </html>
