--- a/archive.html
+++ b/archive.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,6 +11,7 @@
     <nav>
       <a href="index.html">home</a>
       <a href="about.html">about</a>
+      <a href="archive.html">archive</a>
       <a href="objects.html">objects</a>
     </nav>
   </header>
@@ -19,13 +19,10 @@
   <main>
     <h1>archive</h1>
     <p>drawings. pieces. silence.</p>
-    <div class="gallery">
-      <!-- вставь изображения сюда -->
-    </div>
   </main>
 
   <footer>
-    <img src="assets/monkey.svg" alt="monkey" class="monkey" />
+    <img src="assets/monkey.png" alt="monkey" class="monkey" />
   </footer>
 </body>
 </html>
