--- a/objects.html
+++ b/objects.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,19 +12,39 @@
       <a href="index.html">home</a>
       <a href="about.html">about</a>
       <a href="archive.html">archive</a>
+      <a href="objects.html">objects</a>
     </nav>
   </header>
 
   <main>
     <h1>objects</h1>
-    <p>you can take these with you. or not.</p>
-    <div class="gallery">
-      <!-- вставь объекты сюда -->
-    </div>
+    <p>you can take these with you. or not.
+
+<section class="object">
+  <h2>custom canvas</h2>
+  <p>
+    painted from your memory<br>
+    size and mood — we decide together<br>
+    starts at €120<br>
+    payment up front · no edits
+  </p>
+</section>
+
+<section class="object">
+  <h2>custom toy</h2>
+  <p>
+    small soft creature<br>
+    sculpted by hand, maybe with eyes<br>
+    starts at €100<br>
+    one of a kind · no corrections
+  </p>
+</section>
+
+<p>to order — <a href="https://instagram.com/evg.damk" target="_blank">DM me on Instagram</a></p></p>
   </main>
 
   <footer>
-    <img src="assets/monkey.svg" alt="monkey" class="monkey" />
+    <img src="assets/monkey.png" alt="monkey" class="monkey" />
   </footer>
 </body>
 </html>
