--- a/archive.html
+++ b/archive.html
@@ -21,7 +21,7 @@
   </main>
 
   <footer>
-    <img src="assets/monkey.png" alt="monkey" class="monkey" />
+    <img src="assets/monkey1.png" alt="monkey" class="monkey" id="monkey" />
   </footer>
 </body>
 </html>
