--- a/objects.html
+++ b/objects.html
@@ -1,3 +1,14 @@
+<script>
+  const monkey = document.getElementById('monkey');
+  const images = ['monkey1.png', 'monkey2.png', 'monkey3.png', 'monkey4.png'];
+
+  monkey.addEventListener('click', () => {
+    let current = monkey.getAttribute('src').split('/').pop();
+    let others = images.filter(img => img !== current);
+    let next = others[Math.floor(Math.random() * others.length)];
+    monkey.setAttribute('src', 'assets/' + next);
+  });
+</script>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -43,7 +54,7 @@
   </main>
 
   <footer>
-    <img src="assets/monkey.png" alt="monkey" class="monkey" />
+    <img src="assets/monkey1.png" alt="monkey" class="monkey" id="monkey" />
   </footer>
 </body>
 </html>
