--- a/about.html
+++ b/about.html
@@ -3,28 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>about — zhenya</title>
+  <title>about — damk</title>
   <link rel="stylesheet" href="css/styles.css" />
-  <style>
-    @keyframes spin-grow {
-      0% {
-        transform: rotate(0deg) scale(1);
-        opacity: 1;
-      }
-      50% {
-        transform: rotate(720deg) scale(2.5);
-        opacity: 0.9;
-      }
-      100% {
-        transform: rotate(1440deg) scale(1);
-        opacity: 1;
-      }
-    }
-
-    .spin-and-grow {
-      animation: spin-grow 1.8s ease-in-out;
-    }
-  </style>
 </head>
 <body>
   <header>
