--- a/index.html
+++ b/index.html
@@ -42,9 +42,16 @@
 
         if (next === 'monkey3.png') {
           clickable = false;
-          monkey.classList.add('spin-and-grow');
+
+          // Применяем inline-анимацию
+          monkey.style.transition = 'none';
+          monkey.style.transform = 'rotate(0deg) scale(1)';
+          void monkey.offsetWidth; // перезапуск потока
+          monkey.style.transition = 'transform 1.8s ease-in-out';
+          monkey.style.transform = 'rotate(1440deg) scale(2.5)';
+
           setTimeout(() => {
-            monkey.classList.remove('spin-and-grow');
+            monkey.style.transform = 'rotate(0deg) scale(1)';
             clickable = true;
           }, 2000);
         }
