--- a/archive.html
+++ b/archive.html
@@ -20,6 +20,7 @@
   <main>
     <h1>archive</h1>
     <p>drawings. pieces. silence.</p>
+    <div class="gallery" id="gallery"></div>
   </main>
 
   <footer>
