--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <a href="about.html">about</a>
       <a href="archive.html">archive</a>
       <a href="objects.html">objects</a>
+      <a href="runner.html">game</a>
     </nav>
   </header>
 
