--- a/runner.html
+++ b/runner.html
@@ -49,7 +49,7 @@
     canvas.width = window.innerWidth;
     canvas.height = window.innerHeight;
 
-    const groundY = canvas.height * 0.8;
+    const groundY = canvas.height * 0.75;
     let score = 0;
     let gameOver = false;
 
@@ -57,14 +57,14 @@
         x: canvas.width * 0.1,
         y: groundY,
         vy: 0,
-        width: 64,
-        height: 64,
+        width: 70,
+        height: 100,
         frame: 0,
         jumping: false
     };
 
     const gravity = 1;
-    const jumpPower = -18;
+    const jumpPower = -24;
     let frames = 0;
     const runSprites = [
         new Image(),
@@ -79,6 +79,8 @@
 
     const cloud = new Image();
     cloud.src = "assets/runner/cloud.png";
+    let cloudX = canvas.width;
+    let cloudY = groundY * 0.4;
 
     const obstacleSprites = [
         "ob1.png",
@@ -103,7 +105,6 @@
     });
 
     let obstacles = [];
-    let cloudX = canvas.width;
 
     function spawnObstacle() {
         const sprite = obstacleSprites[Math.floor(Math.random() * obstacleSprites.length)];
@@ -118,16 +119,20 @@
     }
 
     function drawBackground() {
+        const tileWidth = bg.width;
         bgX -= 2;
-        if (bgX <= -canvas.width) bgX = 0;
-        ctx.drawImage(bg, bgX, groundY - bg.height, canvas.width, bg.height);
-        ctx.drawImage(bg, bgX + canvas.width, groundY - bg.height, canvas.width, bg.height);
+        if (bgX <= -tileWidth) bgX = 0;
+        ctx.drawImage(bg, bgX, groundY - bg.height);
+        ctx.drawImage(bg, bgX + tileWidth, groundY - bg.height);
     }
 
     function drawCloud() {
         cloudX -= 0.5;
-        if (cloudX < -200) cloudX = canvas.width + Math.random() * 300;
-        ctx.drawImage(cloud, cloudX, 80, 100, 60);
+        if (cloudX < -100) {
+            cloudX = canvas.width + Math.random() * 300;
+            cloudY = groundY * 0.4 + Math.random() * 50;
+        }
+        ctx.drawImage(cloud, cloudX, cloudY, 100, 60);
     }
 
     function drawPlayer() {
