--- a/runner.html
+++ b/runner.html
@@ -20,14 +20,17 @@
         nav {
             position: absolute;
             top: 10px;
-            left: 10px;
-            z-index: 10;
+            left: 0;
+            width: 100%;
+            text-align: center;
+            font-family: 'Space Grotesk', sans-serif;
         }
         nav a {
             text-decoration: none;
             color: black;
-            margin-right: 10px;
+            margin: 0 8px;
             font-size: 16px;
+            font-family: 'Space Grotesk', sans-serif;
         }
         nav a:hover {
             text-decoration: underline;
@@ -146,14 +149,15 @@
     }
 
     function drawScore() {
-        ctx.fillStyle = "#fff";
-        ctx.font = "20px sans-serif";
+        ctx.fillStyle = "white";
+        ctx.font = "20px 'Space Grotesk', sans-serif";
+        ctx.font = "20px 'Space Grotesk', sans-serif";
         ctx.fillText(`damks: ${score}`, 20, 60);
     }
 
     function drawGameOver() {
         ctx.fillStyle = "#000";
-        ctx.font = "40px sans-serif";
+        ctx.font = "40px 'Space Grotesk', sans-serif";
         ctx.fillText("DAMK", canvas.width / 2 - 60, canvas.height / 2);
         ctx.font = "20px sans-serif";
         ctx.fillText("click to try again", canvas.width / 2 - 70, canvas.height / 2 + 30);
