--- a/runner.html
+++ b/runner.html
@@ -149,14 +149,14 @@
     }
 
     function drawScore() {
-        ctx.fillStyle = "white";
+        ctx.fillStyle = "#fff";
         ctx.font = "20px 'Space Grotesk', sans-serif";
         ctx.font = "20px 'Space Grotesk', sans-serif";
         ctx.fillText(`damks: ${score}`, 20, 60);
     }
 
     function drawGameOver() {
-        ctx.fillStyle = "#000";
+        ctx.fillStyle = "#fff";
         ctx.font = "40px 'Space Grotesk', sans-serif";
         ctx.fillText("DAMK", canvas.width / 2 - 60, canvas.height / 2);
         ctx.font = "20px sans-serif";
