--- a/runner.html
+++ b/runner.html
@@ -79,7 +79,7 @@
     bg.src = "assets/runner/by.png";
     let bgX = 0;
 
-    const obstacleSprites = ["ob1.png", "ob2.png", "ob3.png"].map(name => {
+    const obstacleSprites = ["ob1.png", "ob2.png", "ob3.png", "ob4.png"].map(name => {
         const img = new Image();
         img.src = `assets/runner/${name}`;
         return img;
