--- a/runner.html
+++ b/runner.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>damk: runner</title>
+    <title>damk: game</title>
+    <link rel="stylesheet" href="css/styles.css" />
+    <script data-goatcounter="https://damk.goatcounter.com/count"
+            async src="//gc.zgo.at/count.js"></script>
     <style>
         html, body {
             margin: 0;
